# usb-mate

./: CMakeLists.txt
main/: CMakeLists.txt  lv_conf.h  lvgl_task.c  lvgl_task.h  main.c  system_info.c  system_info.h  ui_events.h
main/I2C/: I2C.c
main/touch_driver/: cst328.c  cst328.h
main/ui/: ui.c  ui.h
